k8s/base/workloads/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-service
  labels:
    app: web-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-service
  template:
    metadata:
      labels:
        app: web-service
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: web-service
      containers:
      - name: web-service
        image: web-service:latest
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
